Finished gui and it works!
